hphp/hack/test/typecheck/class_property_initialization/call_in_static_dict.php.exp
File "call_in_static_dict.php", line 7, characters 27-32:
Initialization of class property must be a static literal expression. (Typing[4152])
